--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hustlr</title>
+
+  <!-- Link your CSS -->
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
 <header>
   <div class="brand">
     <img src="https://i.postimg.cc/wMdB4yjR/Hustlr.png" alt="Hustlr logo" />
@@ -68,3 +80,7 @@
 <footer>
   © 2026 Hustlr. Built for hustlers everywhere.
 </footer>
+
+</body>
+</html>
+
