--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <a href="#features">Features</a>
     <a href="#how">How it Works</a>
     <a href="#">Get the App</a>
-    <a href="#">About Us</a>
+    <a href="#About us">About Us</a>
   </nav>
 </header>
 
@@ -80,6 +80,9 @@
       </div>
     </div>
   </section>
+
+  <section id="About Us">
+    
 </main>
 
 <footer>
